--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": "airbnb",
     "rules": {
       "react/jsx-filename-extension": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/button-has-type": "off",
+      "no-restricted-syntax": "off",
+      "react/jsx-one-expression-per-line": "off"
     }
   },
   "browserslist": [
